--- a/app/src/main/res/layout/activity_my__attention_.xml
+++ b/app/src/main/res/layout/activity_my__attention_.xml
@@ -8,13 +8,31 @@
 
 
 
-    <ImageView
-        android:id="@+id/img_back"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:src="@drawable/com_icon_my_default_"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="24dp"
-        android:layout_marginBottom="20dp"
-        />
+    <RelativeLayout
+        android:id="@+id/lay"
+        android:layout_marginTop="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+        android:text="电影"
+        android:padding="0dp"
+        android:id="@+id/bt_pian"
+
+            android:layout_marginLeft="100dp"
+        android:layout_width="83dp"
+        android:layout_height="25dp" />
+        <Button
+            android:text="影院"
+            android:layout_toRightOf="@id/bt_pian"
+            android:padding="0dp"
+            android:id="@+id/bt_cheng"
+            android:layout_marginLeft="32dp"
+            android:layout_width="83dp"
+            android:layout_height="25dp" />
+    </RelativeLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/ercy"
+            android:layout_below="@id/lay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 </RelativeLayout>
