--- a/app/src/main/res/layout/pay_layout.xml
+++ b/app/src/main/res/layout/pay_layout.xml
@@ -12,7 +12,7 @@
         android:textColor="#666666"/>
     <!--<ImageView-->
         <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_height="wrap_conent"-->
         <!--android:src=""-->
         <!--/>-->
 
