--- a/app/src/main/res/layout/activity_my__tracker_.xml
+++ b/app/src/main/res/layout/activity_my__tracker_.xml
@@ -6,7 +6,52 @@
     android:layout_height="match_parent"
     tools:context="com.example.weiducinema.activity.my.MyTrackerActivity">
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_marginTop="50dp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
+                <Button
+                    android:id="@+id/ticket_wait_money"
+                    android:text="待付款"
+                    android:background="@drawable/btn_wu"
+                    android:layout_marginRight="34dp"
+                    android:textSize="14sp"
+                    android:textColor="#333333"
+                    android:layout_width="83dp"
+                    android:layout_height="25dp" />
+                <Button
+                    android:id="@+id/ticket_finish"
+                    android:text="已完成"
+                    android:background="@drawable/btn_wu"
+                    android:textSize="14sp"
+                    android:textColor="#333333"
+                    android:layout_width="83dp"
+                    android:layout_height="25dp" />
+
+            </LinearLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/ticket_recy"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:layout_marginTop="30dp"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+        </LinearLayout>
+
+
+    </LinearLayout>
     <ImageView
         android:id="@+id/img_back"
         android:layout_width="60dp"
