--- a/app/src/main/res/drawable/my_message_shape.xml
+++ b/app/src/main/res/drawable/my_message_shape.xml
@@ -5,8 +5,9 @@
 
     <stroke
       android:width="1dp"
-      android:color="#440a33"
+      android:color="#dedadc"
         />
+
 
     <corners
         android:radius="5dp"
