--- a/app/src/main/res/layout/finish_layout.xml
+++ b/app/src/main/res/layout/finish_layout.xml
@@ -4,7 +4,7 @@
     android:paddingRight="10dp"
     android:paddingLeft="10dp"
     android:paddingBottom="20dp"
-    android:background="@drawable/btn_wu"
+    android:background="@drawable/my_message_shape"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
