--- a/app/src/main/res/layout/wait_money.xml
+++ b/app/src/main/res/layout/wait_money.xml
@@ -29,8 +29,8 @@
             android:layout_margin="10dp"
             android:gravity="center"
             android:text="去付款"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="78dp"
+            android:layout_height="30dp" />
     </RelativeLayout>
     <TextView
         android:id="@+id/one_dingdan"
