--- a/app/src/main/res/layout/activity_my__attention_.xml
+++ b/app/src/main/res/layout/activity_my__attention_.xml
@@ -12,15 +12,16 @@
         android:id="@+id/lay"
         android:layout_marginTop="50dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
         <Button
         android:text="电影"
         android:padding="0dp"
         android:id="@+id/bt_pian"
-
-            android:layout_marginLeft="100dp"
+        android:layout_marginLeft="90dp"
         android:layout_width="83dp"
-        android:layout_height="25dp" />
+        android:layout_height="25dp"
+        android:background="@drawable/btn_wu"/>
         <Button
             android:text="影院"
             android:layout_toRightOf="@id/bt_pian"
@@ -28,7 +29,9 @@
             android:id="@+id/bt_cheng"
             android:layout_marginLeft="32dp"
             android:layout_width="83dp"
-            android:layout_height="25dp" />
+            android:layout_height="25dp"
+            android:background="@drawable/btn_wu"
+            />
     </RelativeLayout>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/ercy"
