--- a/app/src/main/res/layout/activity_my__message_.xml
+++ b/app/src/main/res/layout/activity_my__message_.xml
@@ -12,6 +12,10 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
+      <RelativeLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          >
     <TextView
         android:id="@+id/tv_my_message"
         android:layout_width="wrap_content"
@@ -23,6 +27,18 @@
         android:layout_marginRight="24dp"
         android:text="用户信息"
         />
+      <TextView
+          android:id="@+id/change_message"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="编辑信息"
+          android:textSize="14sp"
+          android:textColor="#f11010"
+          android:layout_marginTop="30dp"
+          android:layout_alignParentRight="true"
+          android:layout_marginRight="24dp"
+          />
+      </RelativeLayout>
     <RelativeLayout
         android:id="@+id/relay1"
         android:layout_width="312dp"
